patches-core/tests/compile_fail/wrong_kind.stderr
error[E0308]: mismatched types
  --> tests/compile_fail/wrong_kind.rs:12:18
   |
12 |     let _: i64 = view.get(params::DRY_WET);
   |            ---   ^^^^^^^^^^^^^^^^^^^^^^^^^ expected `i64`, found `f32`
   |            |
   |            expected due to this
